  * Added two new internal functions for the encoding and decoding of
    base64 in a buffer (including cleanup of wbxml_encoder.c).
  * Added test for ticket #75 (formatted base64 string in binary tag).
  * Failing tests do no longer remove their temporary data.
  * Fixed wrong opaque conversion from WBXML to XML (never normalize
    opaque/binary data).
  * Added a new error code for the base64 decoder only. The decoder
    used the same error code and message like the encoder until now.
  * Added flag WBXML_TAG_OPTION_BINARY to tag MIME of ActiveSync code
    page CompseMail:.
  * Fixed otion -a of xml2wbxml (-a was not allowed as option).
  * Added two tests for ActiveSync command SendMail.
  * Fixed usage of strncasecmp and location of a variable definition
    (changes from ticket #73).
    This fixes some compiler errors from MS VisualStudio C++ 2010.
    The patch was supplied by Boaz Yaniv.

2011-04-27  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta5
  * Fixed an inconsistency in the naming conventions of the new
    functions.

2011-04-19  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta4
  * Added option -a to xml2wbxml (anonymous format). The public ID is
    set to unknown and the DTD is not included.

2011-04-14  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta3
  * Some defines were added again to support the old libwbxml 0.9.2
    interface. This fixes mainly some names of parameter types.
    You can compile libsyncml like follows:
    CFLAGS="-I/usr/local/include/libwbxml-1.0/wbxml" cmake . -B/tmp/build/libsyncml
  * If the XML root element must be used to identify the WBXML language
    then the name space is scanned before the root element itself.
    All SyncML versions use the same root element. Nevertheless it is
    better to set the document type correctly.
  * Fixed literal tag encoding. The element name and not the namespace
    must be encoded.