@@ -1,5 +1,10 @@
+  * Fixed handling of base64 encoded data in elements which are flagged
+    as WBXML_TAG_OPTION_BINARY. The data is no longer decoded before all
+    data is present (ticket #75).
   * Added two new internal functions for the encoding and decoding of
-    base64 in a buffer (including cleanup of wbxml_encoder.c).
+    base64 in a buffer (including cleanup of wbxml_encoder.c). The
+    decoder function supports formatted base64 strings too
+    (e.g. blanks, tabs and newlines).
   * Added test for ticket #75 (formatted base64 string in binary tag).
   * Failing tests do no longer remove their temporary data.
   * Fixed wrong opaque conversion from WBXML to XML (never normalize
